FEE-715: Addressed UXD feedback. Fixed tag input validation and border radius, fixed checkbox and radio spacing between subsequent elements, removed bold treatment on labels, fixed word wrapping on labels

--- a/src/global-styles/standalone/_form_validation.scss
+++ b/src/global-styles/standalone/_form_validation.scss
@@ -41,6 +41,18 @@ input[type="month"] {
 
 
 
+/* tag input validation */
+akam-tag-input {
+  &.ng-invalid.ng-dirty.ng-touched {
+    .ui-select-container {
+      border-color: $colors__red3;
+      border-width: 2px;
+    }
+  }
+}
+
+
+
 /* dropdown menu validation */
 ul.dropdown-menu {
 
